--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "raven-reader",
-  "productName": "Raven Reader",
-  "version": "0.7.2",
+  "name": "flyfree",
+  "productName": "Fly Free",
+  "version": "0.7.3",
   "standard": {
     "globals": [
       "describe",
@@ -14,8 +14,8 @@
       "expect"
     ]
   },
-  "author": "Hello Efficiency Inc <welcome@helloefficiency.com>",
-  "description": "Simple Desktop RSS Reader made using VueJS",
+  "author": "theinnovativeinventor <theinnovativeinventor@gmail.com>",
+  "description": "A forever free fork of Raven Reader",
   "license": "LGPL-3.0",
   "main": "./dist/electron/main.js",
   "scripts": {
@@ -38,8 +38,8 @@
     "unit": "karma start test/unit/karma.conf.js"
   },
   "build": {
-    "productName": "Raven Reader",
-    "appId": "org.helloefficiency.ravenreader",
+    "productName": "Fly Free",
+    "appId": "org.innovativeinventor.flyfree",
     "directories": {
       "output": "build"
     },
